doc/0.5.1-dev/_sources/installation.txt
Installation
============

With Anaconda
-------------
The simplest way to satisfy Tethne's dependencies is to install the Anaconda Python stack.
Anaconda includes its own Python build, as well as a large array of scientific and
numerical Python libraries. You can download the latest version of Anaconda for free from `Continuum Analytics <https://store.continuum.io/cshop/anaconda/>`_.

This version of Tethne has not been tested on Windows, but there's no reason in principal
why it shouldn't work. If you do try it on Windows, `let us know how it goes
<https://github.com/diging/tethne/issues?labels=installation&state=open>`_.

Without Anaconda
----------------

Python
``````
Tethne requires Python 2.7 (untested in Python 3.x). You can get the latest release from
`Python.org <http://www.python.org>`_.

SciPy/NumPy
```````````
SciPy and NumPy are Python libraries for scientific and numerical computing. For details
on installing the SciPy stack, see `this page <http://www.scipy.org/install.html>`_.

To install the SciPy stack with Macports (from the terminal):

.. code-block:: bash

   $ sudo port install py27-numpy py27-scipy py27-matplotlib py27-ipython +notebook py27-pandas py27-sympy py27-nose
   
This should install SciPy, `NumPy <http://www.numpy.org/>`_, `Matplotlib
<http://matplotlib.org/>`_, `IPython <http://ipython.org/>`_, `Pandas
<http://pandas.pydata.org/>`_, `SymPy <http://sympy.org/en/index.html>`_, and 
`Nose <https://nose.readthedocs.org/en/latest/>`_. Of particular interest for Tethne
are SciPy, NumPy, and Matplotlib. But it doesn't hurt to have the rest.

HDF5
````
For ``PyTables`` to work properly (installed in the next step), you will need to download
and install HDF5. You can get the latest source code and binaries from `here
<http://www.hdfgroup.org/HDF5/release/obtain5.html#obtain>`_.

Tethne
------
You can install Tethne and all of its (other) dependencies using ``pip``.

.. code-block:: bash

   $ pip install tethne
   
Alternatively, download the latest version of Tethne from the `Python Package Index
<https://pypi.python.org/pypi/tethne>`_. Unzip the ``tar.gz`` archive, and then:

.. code-block:: bash

   $ cd /path/to/unzipped/tethne-x.y.z
   $ python setup.py install
   
Dependencies
------------
::

   scipy==0.14.0
   numpy==1.8.1
   networkx==1.8.1
   matplotlib==1.3.1
   tables==3.1.1
   Unidecode==0.04.16
   geopy==0.99